@@ -1,7 +1,5 @@
 -server
 -Xmx2G
--XX:-UseBiasedLocking
--XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+ExitOnOutOfMemoryError
@@ -16,3 +14,5 @@
 -DHADOOP_USER_NAME=hive
 -Duser.timezone=Asia/Kathmandu
 -XX:ErrorFile=/docker/logs/product-tests-presto-jvm-error-file.log
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UseAESCTRIntrinsics
